--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -2,7 +2,7 @@
   "name": "samplePKG",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "utility.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ICEBERG-Dev/crypt-pack.git"
