--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samplePKG",
+  "name": "@USERNAME_GITHUB/samplePKG",
   "version": "1.0.0",
   "description": "",
   "main": "utility.js",
