--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -6,5 +6,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ICEBERG-Dev/crypt-pack.git"
-  }
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
+ }
 }
