--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm version patch
-      - run: npm publish
+      - run: git config user.email "yury.lvn@mail.ru" |
+             git config user.name "pieceowater" |
+             npm version patch |
+             npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
