--- a/.github/workflows/npm-pub.yml
+++ b/.github/workflows/npm-pub.yml
@@ -19,6 +19,6 @@ jobs:
       - run: git config user.email "yury.lvn@mail.ru" |
              git config user.name "pieceowater" |
              npm version patch |
-             npm publish
+             npm publish --registry=https://registry.npmjs.org/
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
