--- a/.github/workflows/npm-pub.yml
+++ b/.github/workflows/npm-pub.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Authenticate with npm registry
         run: |
@@ -22,6 +22,6 @@ jobs:
           npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
 
       - name: Publish package to npm registry
-        run: npm publish --access public
+        run: npm publish --access private
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
