--- a/.github/workflows/npm-pub.yml
+++ b/.github/workflows/npm-pub.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Authenticate with npm registry
         run: |
           npm install -g npm-auth-to-token
-          npm-auth-to-token -u pieceowater -p ${NPM_TOKEN} -e yury.lvn@mail.ru -r https://registry.npmjs.org/
+          npm-auth-to-token -u pieceowater -p 123 -e yury.lvn@mail.ru -r https://registry.npmjs.org/
           npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
 
       - name: Publish package to npm registry
