--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "iceberg-crypt",
-  "version": "1.0.6",
+  "name": "@iceberg-dev/crypt-pack",
+  "version": "1.1.0",
   "description": "A utility package for cryptographic operations",
   "main": "crypt.js",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ICEBERG-Dev/crypt-pack.git"
+  },
+  "keywords": [],
+  "author": "iceberg group",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ICEBERG-Dev/crypt-pack/issues"
+  },
+  "homepage": "https://github.com/ICEBERG-Dev/crypt-pack#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
