--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm npm@5ci
+        run: npm ci
 
       - name: Get the latest tag
         id: latest_tag
