--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,11 +35,9 @@ jobs:
 
       - name: Bump package version
         id: version
-        uses: anothrNick/github-tag-action@v1
-        with:
-          github_token: ${{ secrets.NPM_TOKEN }}
-          tag_name: ${{ steps.latest_tag.outputs.tag }}
-          tag_message: 'Bump version'
+        run: |
+          npm version patch
+          echo ::set-output name=version::$(npm --silent run version)
 
       - name: Authenticate with GitHub Packages
         uses: docker/login-action@v1
@@ -54,4 +52,3 @@ jobs:
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
