--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Bump package version
         id: version
         run: |
+          git config --global user.email "yury.lvn@mail.ru"
+          git config --global user.name "pieceowater"
           npm version patch
           echo ::set-output name=version::$(npm --silent run version)
 
