--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/ICEBERG-Dev/crypt-pack.git"
   },
+  "scripts": {
+    "build": "echo 'Building my package...'"
+  },
   "keywords": [],
   "author": "iceberg group",
   "license": "MIT",
