--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,14 @@ jobs:
           git config --global user.email "yury.lvn@mail.ru"
           git config --global user.name "pieceowater"
           npm version patch
-          echo ::set-output name=version::$(npm --silent run version)
+          $LAST_V = (echo ::set-output name=version::$(npm --silent run version))
+          sed -i 's/"version": ".*"/"version": $LAST_V/' package.json
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add package.json
+          git commit -a -m "Update package version"
+          git push 
+
 
       - name: Authenticate with GitHub Packages
         uses: docker/login-action@v1
