--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iceberg-dev/crypt-pack",
-  "version": $(echo ::set-output name=version::$(npm --silent run version)),
+  "version": "1.1.1",
   "description": "A utility package for cryptographic operations",
   "main": "crypt.js",
   "repository": {
