--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish package to GitHub Packages
 
 on:
   push:
-    branches:
-      - main
+#     branches:
+#       - main
 
 jobs:
   publish:
