--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,11 @@ jobs:
         uses: actions/create-release@v1
         with:
           tag_name: ${{ steps.version.outputs.version }}
-          release_name: Release ${{ steps.version.outputs.version }}
+          release_name: v${{ steps.version.outputs.version }}
           body: |
             Changes in this release:
-            - Add new feature X
-            - Fix bug Y
+            - Add new feature
+            - Fix bug
           draft: false
           prerelease: false
         env:
