--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Set release version
         id: version
         run: |
-          git config --global user.email "yury.lvn@mail.ru"
-          git config --global user.name "pieceowater"
-          echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT
-          echo "::set-output name=version::$(npm version patch | cut -c 2-)" 
+          git config --global user.email "yury.lvn@mail.ru" |
+          git config --global user.name "pieceowater" |
+          echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT | 
+          echo "::set-output name=version::$(npm version patch | cut -c 2-)" |
 
       - name: Create release
         uses: actions/create-release@v1
