--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
         run: |
           git config --global user.email "yury.lvn@mail.ru" |
           git config --global user.name "pieceowater" |
-          echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT |
-          echo $version
+          echo (npm version patch) |
+          echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
 
       - name: Create release
         uses: actions/create-release@v1
