--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,20 +28,20 @@ jobs:
         run: |
           git config --global user.email "yury.lvn@mail.ru" |
           git config --global user.name "pieceowater" |
-          echo (npm version patch) |
+          echo $(npm version patch) |
           echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
 
-      - name: Create release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ steps.version.outputs.version }}
-          release_name: v${{ steps.version.outputs.version }}
-          body: |
-            Changes in this release:
-            - Add new feature
-            - Fix bug
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#       - name: Create release
+#         uses: actions/create-release@v1
+#         with:
+#           tag_name: ${{ steps.version.outputs.version }}
+#           release_name: v${{ steps.version.outputs.version }}
+#           body: |
+#             Changes in this release:
+#             - Add new feature
+#             - Fix bug
+#           draft: false
+#           prerelease: false
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
+#           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
