--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,9 @@ jobs:
         run: |
           git config --global user.email "yury.lvn@mail.ru" |
           git config --global user.name "pieceowater" |
-          echo $(npm version patch) |
-          echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
+          echo $(npm version patch) 
 
+#           echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
 #       - name: Create release
 #         uses: actions/create-release@v1
 #         with:
