--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,18 +32,18 @@ jobs:
           npm version patch |
           git push --follow-tags 
           
-      - name: Set release version
-        id: version
-        run: |
-          git config --global user.email "yury.lvn@mail.ru" |
-          git config --global user.name "pieceowater" |
-          echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
+#       - name: Set release version
+#         id: version
+#         run: |
+#           git config --global user.email "yury.lvn@mail.ru" |
+#           git config --global user.name "pieceowater" |
+#           echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
 
       - name: Create release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ steps.version.outputs.version }}
-          release_name: v${{ steps.version.outputs.version }}
+          tag_name: ${{ env.npm_package_version }}
+          release_name: v${{ env.npm_package_version }}
           body: |
             Changes in this release:
             - Add new feature
