--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,12 +25,13 @@ jobs:
           
       - name: Update version in package.json
         run: |
-          git config --global user.email "yury.lvn@mail.ru" |
-          git config --global user.name "pieceowater" |
-          npm i -g @vercel/ncc |
-          ncc build crypt.js |
-          npm version patch |
+          git config --global user.email "yury.lvn@mail.ru" 
+          git config --global user.name "pieceowater" 
+          npm i -g @vercel/ncc 
+          ncc build crypt.js 
+          npm version patch 
           git push --follow-tags 
+          echo $npm_package_version
           
 #       - name: Set release version
 #         id: version
