--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Create release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ env.npm_package_version }}
-          release_name: v${{ env.npm_package_version }}
+          tag_name: ${{ $npm_package_version }}
+          release_name: v${{ $npm_package_version }}
           body: |
             Changes in this release:
             - Add new feature
