--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,6 @@ jobs:
         run: git fetch --tags
           
       - name: Update version
-        id: version
         run: |
           git config --global user.email "yury.lvn@mail.ru" 
           git config --global user.name "pieceowater" 
@@ -34,13 +33,13 @@ jobs:
           git push --follow-tags 
           echo "{npm_package_version}={$npm_package_version}" >> $GITHUB_OUTPUT
           
-#                     
-#       - name: Set release version
-#         id: version
-#         run: |
-#           git config --global user.email "yury.lvn@mail.ru" |
-#           git config --global user.name "pieceowater" |
-#           echo "{version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
+                    
+      - name: Set release version
+        id: version
+        run: |
+          git config --global user.email "yury.lvn@mail.ru" |
+          git config --global user.name "pieceowater" |
+          echo "{npm_package_version}={$(npm version patch | cut -c 2-)}" >> $GITHUB_OUTPUT 
 
       - name: Create release
         uses: actions/create-release@v1
