--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,13 +30,8 @@ jobs:
           npm i -g @vercel/ncc |
           ncc build tools.js |
           npm version patch |
+          echo $npm_package_version |
           git push --follow-tags 
-          
-                    
-      - name: test release version
-        id: version
-        run: |
-          echo ${{ env.npm_package_version }}
 
       - name: Create release
         uses: actions/create-release@v1
