--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iceberg-dev/tools-pack",
-  "version": "",
+  "version": "1.0.1",
   "description": "A utility package for cryptographic operations",
   "main": "tools.js",
   "repository": {
