--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Create Release
 
 on:
   push:
-    branches: [main]
+#     branches: [main]
 
 jobs:
   create_release:
@@ -26,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
-          tag_name: v${{ steps.increment.outputs.version }}
+          tag_name: ${{ steps.increment.outputs.version }}
           release_name: Release v${{ steps.increment.outputs.version }}
           draft: false
           prerelease: false
@@ -35,8 +35,8 @@ jobs:
         run: |
           version=${{ steps.increment.outputs.version }}
           sed -i "s/\"version\": \".*\"/\"version\": \"$version\"/" package.json
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "yury.lvn@mail.ru"
+          git config --global user.name "pieceowater"
           git add package.json
           git commit -m "Increment version to $version" -m "[skip ci]"
           git push
