--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Create Release
 
 on:
   push:
-#     branches: [main]
+    branches: [main]
 
 jobs:
   create_release:
@@ -15,8 +15,8 @@ jobs:
         run: |
           npm version patch --no-git-tag-version
           version=$(node -p "require('./package.json').version")
-          echo "::set-output name=version::$version"
-
+          echo "{version}={$version}" >> $GITHUB_OUTPUT
+          
       - name: Debug
         run: env
 
