--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,9 @@ jobs:
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
-        with:
-          tag_name: ${{ steps.increment.outputs.version }}
-          release_name: Release v${{ steps.increment.outputs.version }}
+        with: 
+          tag_name: ${{ needs.create_release.outputs.version }}
+          release_name: Release v${{ needs.create_release.outputs.version }}
           draft: false
           prerelease: false
 
