--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   create_release:
     runs-on: ubuntu-latest
+    outputs:
+      build_id: ${{ steps.build_step.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -40,3 +42,4 @@ jobs:
           git add package.json
           git commit -m "Increment version to $version" -m "[skip ci]"
           git push
+
