--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,13 +7,12 @@ on:
 jobs:
   create_release:
     runs-on: ubuntu-latest
-    outputs:
-      build_id: ${{ steps.build_step.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Increment version
+        id: version
         run: |
           npm version patch --no-git-tag-version
           version=$(node -p "require('./package.json').version")
@@ -28,8 +27,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
         with: 
-          tag_name: ${{ needs.create_release.outputs.version }}
-          release_name: Release v${{ needs.create_release.outputs.version }}
+          tag_name: ${{ steps.version.outputs.version }}
+          release_name: Release v${{ steps.version.outputs.version }}
           draft: false
           prerelease: false
 
