--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Increment version
-        id: version
+        id: ver
         run: |
           npm version patch --no-git-tag-version
           version=$(node -p "require('./package.json').version")
-          echo "{version}={$version}" >> $GITHUB_OUTPUT
-          
-      - name: Debug
-        run: env
+          echo "v=$version" >> $GITHUB_OUTPUT
 
       - name: Create release
         id: create_release
@@ -27,8 +24,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
         with: 
-          tag_name: ${{ steps.version.outputs.version }}
-          release_name: Release v${{ steps.version.outputs.version }}
+          tag_name: ${{ steps.ver.outputs.v }}
+          release_name: Release v${{ steps.ver.outputs.v }}
           draft: false
           prerelease: false
 
