--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish package to GitHub Packages
 
 on:
   release:
-#     types: [created]
+    types: [created]
 
 jobs:
   publish:
@@ -28,13 +28,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Bump package version
-        id: version
-        run: |
-          git config --global user.email "yury.lvn@mail.ru"
-          git config --global user.name "pieceowater"
-          npm version patch
-          echo ::set-output name=version::$(npm --silent run version)
+#       - name: Bump package version
+#         id: version
+#         run: |
+#           echo "name=version::$(npm --silent run version)" >> $GITHUB_OUTPUT
 
       - name: Authenticate with GitHub Packages
         uses: docker/login-action@v1
